refactor: modernize Java 8 idioms to Java 11 APIs
Apply org.openrewrite.java.migrate.Java8toJava11 (source-only subset):
- Paths.get(...) -> Path.of(...)
- Files.newBufferedWriter(path, UTF_8) -> newBufferedWriter(path) (UTF-8 default)
- redundant UTF-8 charset argument removal

Build-configuration version bumps from the composite recipe were dropped to
keep the Java 11 target and avoid touching build-logic. The try-with-resources
rewrite was dropped where it silently removed a required IOException handler.